# physical_exercise_timer

./: LICENSE  README.md  pubspec.yaml
.github/workflows/: build.yml
android/app/: build.gradle
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: chart.dart  constants.dart  local_storage.dart  main.dart  notifier.dart  state.dart  ui.dart  utils.dart
lib/isar/: database.dart  record.dart  record.g.dart
linux/: CMakeLists.txt  my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
save_my_back/: README.md  config.toml  pubspec.yaml
save_my_back/android/app/: build.gradle
save_my_back/integration_test/: simple_test.dart
save_my_back/ios/Runner/: Info.plist
save_my_back/ios/Runner.xcodeproj/: project.pbxproj
save_my_back/lib/: config.dart  constants.dart  main.dart
save_my_back/lib/app/: chart.dart  chart_notifier.dart  main_screen.dart  main_screen_notifier.dart  (+3 more)
save_my_back/linux/: CMakeLists.txt
save_my_back/rust/: .gitignore  Cargo.toml
save_my_back/rust/src/: frb_generated.rs  lib.rs
save_my_back/rust/src/api/: detector.rs  mod.rs
save_my_back/rust/src/yolo/: infer.rs  mod.rs  utils.rs
save_my_back/rust_builder/: pubspec.yaml
save_my_back/web/: index.html  manifest.json
save_my_back/windows/: CMakeLists.txt
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+34 files in other folders)
