[package]
name = "rust_lib_save_my_back"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
ab_glyph = "0.2.29"
anyhow = "1.0.93"
candle-core = { version = "=0.7.2", features = ['cuda'] }
candle-nn = { version = "=0.7.2", features = ['cuda'] }
candle-transformers = { version = "=0.7.2", features = ['cuda'] }
flutter_rust_bridge = "=2.5.1"
image = "0.25.4"
imageproc = "0.25.0"
once_cell = "1.20.2"
tracing = "0.1.41"
